# testSB

fibocom_opensdk_16009.1000/: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Kconfig  MC66x_16009_openSDK_releasenotes -EN.xlsx  MC66x_16009_openSDK_releasenotes.xlsx  TAG.txt  opencpu.sh
fibocom_opensdk_16009.1000/cmake/: extension.cmake
fibocom_opensdk_16009.1000/components/: CMakeLists.txt
fibocom_opensdk_16009.1000/components/SpreadOrbit/: CMakeLists.txt  core.cmake
fibocom_opensdk_16009.1000/components/SpreadOrbit/inc/: SpreadOrbit.h  SpreadOrbit_config.h.in  carte2kepler.h  common_inc.h  definition.h  earth.h  global_data.h  integrator.h  integrator1obs.h  integrator_am.h  integrator_rk.h  jplbin.h  ldpc_dec.h  moon.h  obs_module.h  os_inc.h  pred_eph_generator.h  ref_sys.h  satellite_accel.h  sun.h  utils.h  xeod_cg_api.h  xeod_cg_module.h
fibocom_opensdk_16009.1000/components/apploader/: CMakeLists.txt
fibocom_opensdk_16009.1000/components/appstart/: CMakeLists.txt  Kconfig  appstart.make
fibocom_opensdk_16009.1000/components/atr/: CMakeLists.txt  Kconfig  atr.cmake  core.cmake
fibocom_opensdk_16009.1000/components/atr/include/: at_cfg.h  (+4 more)
fibocom_opensdk_16009.1000/components/ats/: CMakeLists.txt  Kconfig  ats.cmake
fibocom_opensdk_16009.1000/components/audio/: CMakeLists.txt  Kconfig  LICENSE.amr  LICENSE.sbc  audio.cmake  core.cmake
fibocom_opensdk_16009.1000/components/aworker/: CMakeLists.txt  Kconfig  aworker.cmake
fibocom_opensdk_16009.1000/components/bootloader/: CMakeLists.txt  Kconfig  bootloader.cmake  img.cmake
fibocom_opensdk_16009.1000/components/calclib/: CMakeLists.txt  Kconfig  boot_calclib_crc.cmake  calclib.cmake  calclib_crc.cmake
fibocom_opensdk_16009.1000/components/cfw/: CMakeLists.txt  Kconfig  cfw.cmake  core.cmake
fibocom_opensdk_16009.1000/components/chip/: Kconfig  chip_8850.cmake
fibocom_opensdk_16009.1000/components/crypto/: CMakeLists.txt  crypto.cmake
fibocom_opensdk_16009.1000/components/diag/: CMakeLists.txt  diag.cmake
fibocom_opensdk_16009.1000/components/driver/: CMakeLists.txt  Kconfig  core.cmake  driver.cmake
fibocom_opensdk_16009.1000/components/fibo_logo/: CMakeLists.txt  fibo_logo.h
fibocom_opensdk_16009.1000/components/firmwareupdate/: CMakeLists.txt  Kconfig  fupdate_security_app.cmake  fupdate_security_boot.cmake
fibocom_opensdk_16009.1000/components/fs/: CMakeLists.txt  Kconfig  fs.cmake
fibocom_opensdk_16009.1000/components/gnss/: Kconfig  libgnssmgt.cmake
fibocom_opensdk_16009.1000/components/hal/: CMakeLists.txt  Kconfig  hal.cmake
fibocom_opensdk_16009.1000/components/halo_rec/: CMakeLists.txt  Kconfig
fibocom_opensdk_16009.1000/components/kernel/: CMakeLists.txt  Kconfig  core.cmake  kernel.cmake  osi_lib.cmake
fibocom_opensdk_16009.1000/components/lcdpanel/: CMakeLists.txt
fibocom_opensdk_16009.1000/components/lz4/: CMakeLists.txt  lz4.cmake
fibocom_opensdk_16009.1000/components/mal/: CMakeLists.txt  mal.cmake
fibocom_opensdk_16009.1000/components/ml/: CMakeLists.txt  Kconfig  ml.cmake
fibocom_opensdk_16009.1000/components/modem_lte/: CMakeLists.txt  modem_lte.cmake
fibocom_opensdk_16009.1000/components/nanopb/: CMakeLists.txt  nanopb.cmake
fibocom_opensdk_16009.1000/components/net/: CMakeLists.txt  Kconfig  net.cmake
fibocom_opensdk_16009.1000/components/nvm/: CMakeLists.txt  nvm.cmake
fibocom_opensdk_16009.1000/components/openCPU/: CMakeLists.txt  Kconfig
fibocom_opensdk_16009.1000/components/pam/: CMakeLists.txt  Readme.txt  pam.cmake
fibocom_opensdk_16009.1000/components/service/: CMakeLists.txt  Kconfig  service.cmake
fibocom_opensdk_16009.1000/components/tb/: CMakeLists.txt  tb.cmake
fibocom_opensdk_16009.1000/components/tts/: CMakeLists.txt  Kconfig  core.cmake  tts.cmake
fibocom_opensdk_16009.1000/components/unity/: CMakeLists.txt  unity.cmake
fibocom_opensdk_16009.1000/cust_app/: CMakeLists.txt  CMakeLists_1.txt
fibocom_opensdk_16009.1000/cust_app/include/: fibo_opensdk_comm.h
fibocom_opensdk_16009.1000/cust_app/soundbox/: soundbox.c  soundbox_1.c  tags  zip_soundbox.c
fibocom_opensdk_16009.1000/cust_app/src/: app_at_cmd.c  app_codes.c  fibo_config.c  fibo_logo_config.c  fibo_vendor_config.c  flash_partinfo.c
fibocom_opensdk_16009.1000/cust_app/tools/: build_all_target_sdk.sh  copy_project.sh  testcase_mk.py
fibocom_opensdk_16009.1000/fibocom/: CMakeLists.txt  Kconfig  core.cmake  fibocom.cmake
fibocom_opensdk_16009.1000/fibocom/api/: CUDW.h  af_bzlib.h  af_fota.h  af_private.h  fibo_log.h  fibo_opencpu.h  fibo_wifiscan.h  fibocom.h.in  oc_adc.h  oc_charge.h  oc_ffs.h  oc_fota.h  oc_ftp.h  oc_gb2312_unicode.h  oc_gnss.h  oc_gprs.h  oc_heartbeat.h  oc_http.h  oc_mbedtls.h  oc_mqtt.h  oc_mqtt_cloud.h  oc_osi.h  oc_sdc.h  oc_socket.h  oc_ssl.h
fibocom_opensdk_16009.1000/fibocom/auto_apn/: auto_apn.h
fibocom_opensdk_16009.1000/fibocom/e_cloud/: fibo_iotask.h  fibo_lwm2m.h
fibocom_opensdk_16009.1000/fibocom/fibo_demo/: oc_appcmd_demo.c  oc_audio_demo.c  oc_audio_stream_play_demo.c  oc_ble_demo.c  oc_call_demo.c  oc_chipid_demo.c  oc_codec_demo.c  oc_codec_es8311_demo.c  oc_extflash_demo.c  oc_fota_demo.c  oc_ftp_demo.c  oc_gb2312_utf16_demo.c  oc_http_demo.c  oc_i2c_demo.c  oc_key_register_callback_demo.c  oc_mqtt_cloud_demo.c  oc_mqtt_demo.c  oc_mqtt_demo1.c  oc_nonsignalling_test_demo.c  oc_nw_demo.c  oc_pdp_demo.c  oc_psm_demo.c  oc_recorder_demo.c  oc_sftp_demo.c  oc_socket_demo.c  oc_spi_demo.c  oc_tts_demo.c  oc_uart_to_rs485_demo.c  oc_wifiscan_demo.c  tags
fibocom_opensdk_16009.1000/fibocom/fibocustom/: CMakeLists.txt  Kconfig
fibocom_opensdk_16009.1000/fibocom/include/: fibo_common.h  fibocom_com_api.h  fibocom_com_msg.h
fibocom_opensdk_16009.1000/fibocom/opencpu/: fibo_opencpu.h  fibo_opencpu_comm.h  oc_call.h  oc_nw.h  oc_sms.h  oc_uart.h  tags
fibocom_opensdk_16009.1000/fibocom/tts/: sconv.h
fibocom_opensdk_16009.1000/fibocom/websocket/: fibo_at_params.h  fibo_ws.h
fibocom_opensdk_16009.1000/tools/: build_all_target.sh  build_target.sh  codesize.py  deliverpack.py  launch.sh  modemgen.py
(+996 files in other folders)
